--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     .grid-container {
       display: grid;
       grid-template-columns: repeat(5, 1fr); /* 5 columnas de ancho flexible */
-      gap: 20px; /* Espacio entre celdas */
+      gap: 7px; /* Espacio entre celdas */
       max-width: 800px;
       margin: 0 auto;
-      padding: 20px;
+      padding: 10px;
     }
 
     /* Estilo para los botones */
@@ -45,7 +45,7 @@
       justify-content: center;
       align-items: center;
       background-color: #0dd3c9;
-      border: none;
+      border: 14px;
       border-radius: 8px;
       cursor: pointer;
       font-size: 24px;
@@ -56,7 +56,7 @@
     }
 
     .grid-item:hover {
-      background-color: #0888ce;
+      background-color: #50db00;
       transform: scale(1.05);
     }
 
